# intrinsicai-aic

./: .gitignore  README.md  pixi.toml
aic_adapter/: package.xml
aic_adapter/src/: aic_adapter.cpp
aic_assets/: package.xml
aic_assets/models/Robotiq Hand-E/: robotiq_hande.ros2_control.xacro
aic_bringup/: README.md  package.xml
aic_controller/: package.xml
aic_description/urdf/: ur_gz.urdf.xacro
aic_engine/: CMakeLists.txt  package.xml
aic_engine/config/: sample_config.yaml
aic_engine/src/: aic_engine.cpp  aic_engine.hpp
aic_example_policies/: README.md  package.xml
aic_gazebo/: package.xml
aic_interfaces/aic_control_interfaces/: package.xml
aic_interfaces/aic_engine_interfaces/: package.xml
aic_interfaces/aic_model_interfaces/: package.xml
aic_interfaces/aic_model_interfaces/msg/: Observation.msg
aic_interfaces/aic_task_interfaces/: package.xml
aic_model/: package.xml
aic_model/aic_model/: model_node.py
aic_scoring/: package.xml
aic_scoring/include/aic_scoring/: ScoringTier2.hh
aic_scoring/src/: ScoringTier2.cc
aic_utils/aic_isaac/: LICENSE  README.md
aic_utils/aic_isaac/aic_isaaclab/: .gitattributes
aic_utils/aic_isaac/aic_isaaclab/scripts/: list_envs.py  random_agent.py  record_demos.py  replay_demos.py  teleop.py  zero_agent.py
aic_utils/aic_isaac/aic_isaaclab/scripts/rsl_rl/: cli_args.py  play.py  train.py
aic_utils/aic_isaac/aic_isaaclab/source/aic_task/: setup.py
aic_utils/aic_isaac/aic_isaaclab/source/aic_task/aic_task/: __init__.py  extension.py
aic_utils/aic_isaac/aic_isaaclab/source/aic_task/aic_task/tasks/: __init__.py
aic_utils/aic_isaac/aic_isaaclab/source/aic_task/aic_task/tasks/manager_based/aic_task/: __init__.py  aic_task_env_cfg.py
aic_utils/aic_isaac/aic_isaaclab/source/aic_task/aic_task/tasks/manager_based/aic_task/agents/: rsl_rl_ppo_cfg.py
aic_utils/aic_isaac/aic_isaaclab/source/aic_task/aic_task/tasks/manager_based/aic_task/mdp/: __init__.py  events.py  observations.py  rewards.py
aic_utils/aic_isaac/aic_isaaclab/source/aic_task/config/: extension.toml
aic_utils/aic_isaac/aic_isaaclab/source/aic_task/docs/: CHANGELOG.rst
aic_utils/aic_mujoco/: CMakeLists.txt  README.md  mujoco.repos  package.xml
aic_utils/aic_mujoco/launch/: aic_mujoco_bringup.launch.py
aic_utils/aic_mujoco/mjcf/: aic_robot.xml  aic_world.xml  scene.xml
aic_utils/aic_mujoco/scripts/: add_cable_plugin.py  load_aic_world.py  view_scene.py
aic_utils/aic_teleoperation/: package.xml
docs/: aic_controller.md  getting_started.md  participant_utilities.md  phases.md  policy.md  qualification_phase.md  scene_description.md  submission.md  troubleshooting.md
