<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aic_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo-specific implementations for the aic project</description>
  <maintainer email="caguero@honurobotics.com">Carlos Agüero</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>gz_plugin_vendor</build_depend>
  <build_depend>gz_common_vendor</build_depend>
  <build_depend>gz_cmake_vendor</build_depend>
  <build_depend>gz_sim_vendor</build_depend>

  <test_depend>ament_lint_auto</test_depend>

  <depend>aic_engine_interfaces</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
