<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aic_mujoco</name>
  <version>0.0.0</version>
  <description>MuJoCo integration for AI for Industry Challenge</description>
  <maintainer email="yadunund@intrinsic.ai">Yadunund Vijay</maintainer>
  <maintainer email="kbalasundar@intrinsic.ai">Kaushik Balasundar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>aic_adapter</exec_depend>
  <exec_depend>aic_bringup</exec_depend>
  <exec_depend>launch_ros</exec_depend>
	<!-- Commented out so that the package builds with the default workspace setup. -->
	<!-- Users will clones these packages separately by following the README. -->
  <!-- <exec_depend>mujoco_ros2_control</exec_depend> -->
  <!-- <exec_depend>mujoco_vendor</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
